--- a/gridlex/res.css
+++ b/gridlex/res.css
@@ -50,7 +50,7 @@
     font-weight: bold;
   }
 
-  .collapsed {
+  .Get {
     display: none;
   }
 
@@ -107,8 +107,7 @@
       left: 570px;
 
 }
-      nav {
-    background-color:#fff;
+.nav {
     overflow: hidden;
     position: fixed;
     top: 0;
@@ -122,7 +121,7 @@
   nav a {
     float: right;
     margin-right: 100px;
-    color: rgb(32, 97, 236);
+    color: #fff;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -134,3 +133,52 @@
     background-color: #1d3ddb;
     color: black;
   }
+  /* Styles for mobile view */
+@media (max-width: 767px) {
+  /* Styles for navigation menu */
+  nav {
+    display: flex;
+    flex-direction: column;
+  }
+
+  nav a {
+    display: block;
+    padding: 10px;
+    text-align: center;
+  }
+}
+
+/* Styles for desktop view */
+@media (min-width: 768px) {
+  /* Styles for navigation menu */
+  nav {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  nav a {
+    display: inline-block;
+    padding: 10px;
+    text-align: center;
+  }
+}
+.card{
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+.details{
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+.sec{
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
+.card-header{
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+}
