--- a/gridlex/res.css
+++ b/gridlex/res.css
@@ -17,16 +17,6 @@
     width: 100%;
     height: auto;
   }
-
-  .carousel-control-prev,
-  .carousel-control-next {
-    color: #0a52edf1;
-    font-size: 2rem;
-    background-color: rgba(54, 5, 248, 0.89);
-    width: 100px;
-    height: 100px;
-  }
-
   .counter-circle {
     position: relative;
     width: 150px;
@@ -90,23 +80,6 @@
     border: none;
     cursor: pointer;
   }
-  .img4{
-      width: 110px;
-      height: 110px;
-      margin-right: 460px;
-      position: relative;
-      top: 40px;
-      left: 270px;
-}
-.img5{
-      width: 110px;
-      height: 110px;
-      margin-right: 460px;
-      position: relative;
-      bottom: 70px;
-      left: 570px;
-
-}
 .nav {
     overflow: hidden;
     position: fixed;
@@ -147,10 +120,7 @@
     text-align: center;
   }
 }
-
-/* Styles for desktop view */
 @media (min-width: 768px) {
-  /* Styles for navigation menu */
   nav {
     display: flex;
     justify-content: space-between;
@@ -181,4 +151,199 @@
   justify-content: center;
   text-align: center;
   align-items: center;
+}
+.progress-circle {
+  width: 200px;
+  height: 200px;
+  background-color: #f5f5f5;
+  border-radius: 50%;
+  position: relative;
+  overflow: overlay;
+  display: inline-block;
+  margin: 10px;
+}
+
+.progress-circle .progress-bar {
+  position: absolute;
+  top: 10px;
+  left: 0;
+  bottom: 0;
+  background-color: #007bff;
+  border-radius: 50%;
+  transition: width 0.5s ease-in-out;
+}
+
+.progress-circle .counter {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 36px;
+  font-weight: bold;
+  color: #000;
+}
+.progress-circle1 {
+  width: 200px;
+  height: 200px;
+  background-color: #f5f5f5;
+  border-radius: 50%;
+  position: relative;
+  left:120px;
+   overflow: hidden;
+  display: inline-block;
+  margin: 10px;
+}
+
+.progress-circle1 .progress-bar {
+  position: absolute;
+  top: 10px;
+  left: 0;
+  bottom: 0;
+  background-color: #007bff;
+  border-radius: 50%;
+  transition: width 0.5s ease-in-out;
+}
+
+.progress-circle1 .counter {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 36px;
+  font-weight: bold;
+  color: #000;
+}
+.blockquote-footer{
+  background-color: #007bff;
+  width: auto;
+  height: fit-content;
+}
+#submitBtn{
+  background-color: #392781fb;
+  color: #fff;
+}
+#p1{
+  color: #fff;
+}
+#p2{
+  color: #fff;
+}
+#p3{
+  color: #fff;
+}
+.card-header1{
+ padding-bottom: 30px;
+ justify-content: center;
+ align-items: center;
+ text-align: center;
+ 
+}
+
+/* footer */
+.footer {
+  background-color: #007bff;
+  color: white;
+  padding: 20px 0;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+}
+.footer h4 {
+  text-align: center;
+}
+
+.footer .details {
+  margin-top: 20px;
+  
+}
+
+.footer #hidden {
+  display: none;
+}
+
+.footer form {
+  margin-top: 10px;
+}
+
+.footer form label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.footer form input,
+.footer form textarea {
+  width: 100%;
+  padding: 5px;
+  margin-bottom: 10px;
+  border-radius: 4px;
+  border: 1px solid #0c0808;
+}
+
+.footer form button {
+  width: 100%;
+  padding: 8px 16px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.footer #popup {
+  display: none;
+  margin-top: 20px;
+  padding: 10px;
+  background-color: #f8f8f8;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.footer #popup h3 {
+  margin-top: 0;
+}
+
+.footer #popup p {
+  margin-bottom: 5px;
+}
+
+.footer #popup button {
+  padding: 5px 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.footer ul.list-unstyled {
+  margin-top: 20px;
+  padding-left: 0;
+  list-style-type: none;
+}
+
+.footer ul.list-unstyled li {
+  margin-bottom: 5px;
+}
+
+.footer ul.list-unstyled i {
+  margin-right: 5px;
+}
+.footer hr {
+  border-color: #ccc;
+  margin-top: 40px;
+  margin-bottom: 20px;
+}
+
+.footer p {
+  margin-bottom: 0;
+}
+.footer #collapseBtn{
+  margin-bottom: 20px;
+  background-color: #221670;
+  color: #fff;
+  width: 150px;
+  margin-top: 30px;
+}
+@media (max-width: 768px) {
+  .footer .col-md-3 {
+    margin-bottom: 20px;
+  }
 }
