--- a/gridlex/res.css
+++ b/gridlex/res.css
@@ -254,6 +254,8 @@
 
 .footer .details {
   margin-top: 20px;
+  position: relative;
+  left: 260px;
   
 }
 
@@ -341,9 +343,29 @@
   color: #fff;
   width: 150px;
   margin-top: 30px;
+  margin-left: 270px;
 }
 @media (max-width: 768px) {
   .footer .col-md-3 {
     margin-bottom: 20px;
   }
 }
+@media (min-width: 300px) and (max-width: 768px){
+  .footer #collapseBtn{
+    margin-top: 30px;
+    position: relative;
+    right: 170px;
+  }
+}
+@media (min-width: 300px) and (max-width: 768px){
+  .footer .details {
+    margin-top: 20px;
+    position: sticky;
+    left: 300px;
+    top:300px
+  
+    
+  }
+}
+
+
