--- a/gridlex/index.css
+++ b/gridlex/index.css
@@ -367,5 +367,62 @@
     
   }
 }
+@media (min-width: 568px) and (max-width: 768px){
+  .footer .details {
+    margin-top: 20px;
+    position: sticky;
+    left: 300px;
+    top:300px
+  
+    
+  }
+}
+@media (min-width: 568px) and (max-width: 1024px){
+  .footer #collapseBtn{
+    margin-top: 30px;
+    position: relative;
+    left: 0px;
+  }
+  
+}
+
+@media (min-width: 768px){
+  .footer .details {
+    margin-top: 20px;
+    position: relative;
+    left: 260px;
+    top:0px
+  }
+}
+@media (min-width: 1024px){
+  .footer .details {
+  position: relative;
+  left: 350px ;
+    
+  }
+}
+@media (min-width: 1024px){
+  .footer #collapseBtn {
+    position: relative;
+    left: 110px;
+    
+  }
+}
+@media (min-width: 1440px){
+  .footer .details {
+  position: relative;
+  left: 440px;
+    
+  }
+}
+
+@media (min-width: 1440px){
+  .footer #collapseBtn {
+  position: relative;
+  left: 300px;
+    
+  }
+}
+
 
 
